generate random question

--- a/src/template.html
+++ b/src/template.html
@@ -7,10 +7,10 @@
   </head>
   <body>
     <div class="container">
-      <h3>Do not laugh Challenge</h3>
-      <img id="passImg" alt="">
+      <h3>Solve questoin</h3>
+      <img id="passImg" alt="" />
       <div id="joke" class="joke"></div>
-      <button id="jokeBtn" class="btn">get another joke</button>
+      <button id="jokeBtn" class="btn">get another question</button>
     </div>
   </body>
 </html>
