--- a/src/template.html
+++ b/src/template.html
@@ -5,12 +5,5 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title><%= htmlWebpackPlugin.options.title%></title>
   </head>
-  <body>
-    <div class="container">
-      <h3>Solve questoin</h3>
-      <img id="passImg" alt="" />
-      <div id="joke" class="joke"></div>
-      <button id="jokeBtn" class="btn">get another question</button>
-    </div>
-  </body>
+  <body></body>
 </html>
